--- a/apps/api/composer.json
+++ b/apps/api/composer.json
@@ -6,7 +6,8 @@
 	"require": {
 		"php": "^8.4",
 		"laravel/framework": "^12.0",
-		"laravel/tinker": "^2.10.1"
+		"laravel/tinker": "^2.10.1",
+		"tymon/jwt-auth": "^2.2"
 	},
 	"require-dev": {
 		"laravel/sail": "^1.41",
