New database/controllers for storing messages

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -21,6 +21,15 @@ DB_PASSWORD=password
 DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
 
+DB_CHAT_CONNECTION=mysql
+DB_CHAT_HOST=127.0.0.1
+DB_CHAT_PORT=3308
+DB_CHAT_DATABASE=database
+DB_CHAT_USERNAME=user
+DB_CHAT_PASSWORD=password
+DB_CHAT_CHARSET=utf8mb4
+DB_CHAT_COLLATION=utf8mb4_unicode_ci
+
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
