--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -11,3 +11,15 @@ services:
             - "3307:3306"
         volumes:
             - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
+    mysql-chat:
+        image: mysql:9.5
+        restart: always
+        environment:
+            MYSQL_DATABASE: database
+            MYSQL_USER: user
+            MYSQL_PASSWORD: password
+            MYSQL_ROOT_PASSWORD: password
+        ports:
+            - "3308:3306"
+        volumes:
+            - ./chatSchema.sql:/docker-entrypoint-initdb.d/chatSchema.sql
